--- a/styles/styles.css
+++ b/styles/styles.css
@@ -125,6 +125,12 @@ main div {
     }
 }
 
+@media screen and (max-height: 600px) {
+    html, body {
+        height: inherit;
+    }
+}
+
 @media screen and (max-width: 374px) {
     .img-frame {
         max-width: 250px;
