--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,6 +33,7 @@ body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    text-shadow: 0px 1px #420053;
 }
 
 img {
